Revision history for Perl extension Catalyst::Model::DBIC::Schema

0.56  2011-10-22 15:34:59
        - add PerRequestSchema trait (t0m)

0.55  Fri Sep 16 08:55:53 UTC 2011
        - add DBD::SQLite to test_requires (RT#70357)

0.54  Fri Aug  5 11:29:00 EDT 2011
        - Changed t/08helper.t to skip if required features are not installed.
        - tweaked the Makefile.PL to support these changes

0.53  Wed Aug  3 03:45:07 UTC 2011
        - check loader args after connect_info against loader methods and remove
          them from connect_info

0.52  Thu Jul 28 22:07:38 UTC 2011
        - fix a bug in loader args reading after connect_info (skip structs)

0.51  Wed Jul 27 20:57:47 UTC 2011
        - warn when helper finds no tables
        - accept loader args after connect_info

0.50  Fri May 20 22:45:07 UTC 2011
        - change repository link to the new git repo
        - get t/05testapp.t to run on Win32

0.49  Wed May 11 06:03:50 UTC 2011
        - make sure storage_type class is loaded before ->isa check in
          Replicated trait (RT#65791)
        - fix regex stringification test for perl 5.14 (RT#68098)
        - update connect_info POD (RT#66010)

0.48  Thu Dec  9 21:08:33 UTC 2010
        - fix usage of Try::Tiny in helper

0.47  Wed Dec  8 22:21:06 UTC 2010
        - fix loader version check

0.46  Wed Dec  8 13:35:28 UTC 2010
        - make use_moose detection more robust

0.45  Wed Dec  8 12:05:58 UTC 2010
        - fix bug where non-result files were picked up for Moose check

0.44  Tue Dec  7 03:50:48 UTC 2010
        - do not upgrade non-Moose schemas to use_moose=1 (RT#60558)
        - added col_collision_map => 'column_%s' as default loader option
          (will take effect on release of loader 0.07003)

0.43  Sun Jul 25 01:00:34 UTC 2010
        - add dep for MooseX::NonMoose for the use_moose=1 option

0.42  Sat Jul 24 23:14:27 UTC 2010
        - add use_moose=1 to loader options by default for create=static
